--- a/notes/浏览器渲染原理.md
+++ b/notes/浏览器渲染原理.md
@@ -4,7 +4,7 @@
 
 1. 构建DOM树
    
-    浏览器主进程将 html 传给渲染进程，渲染进程会解析文本字符串为树形结构的 DOM 树。一般来说，这个过程发生在页面初次加载，或页面 JavaScript 修改了节点结构的时候。渲染 html 为 DOM 的方法由 HTML Standard 定义。（浏览器主进程同时开始加载次级资源如js，css，`<img>，<link>`，浏览器主进程可以在构建DOM的过程中去请求他们）
+    浏览器主进程将 html 传给渲染进程，渲染进程会解析文本字符串为树形结构的 DOM 树。一般来说，这个过程发生在页面初次加载，或页面 JavaScript 修改了节点结构的时候。渲染 html 为 DOM 的方法由 HTML Standard 定义。
   
 2. 构建渲染树
    
@@ -66,11 +66,12 @@
 
 - will-change 设置为 opacity、transform、top、left、bottom、right（其中 top、left 等需要设置明确的定位属性，如 relative 等）
 
+- position : fixed 定位
+
 - 有合成层后代同时本身有 transform、opactiy（小于 1）、mask、fliter、reflection 属性
 
 - 有合成层后代同时本身 overflow 不为 visible
-- 
-- 有合成层后代同时本身 fixed 定位
+
 
 
 ## 隐式合成
