--- a/notes/浏览器的进程与线程.md
+++ b/notes/浏览器的进程与线程.md
@@ -12,7 +12,7 @@
 
   - UI thread: 控制浏览器上的按钮及输入框
 
-  - network thread: 处理网络请求，从网上获取数据
+  - network thread: 处理网络请求，从网上获取数据 (输入url后拉取html给渲染进程渲染DOM树，在渲染进程创建DOM树的过程中也会拉取次级资源，如js，img，link)
 
   - storage thread: 控制文件等的访问
 
