--- a/notes/网络知识.md
+++ b/notes/网络知识.md
@@ -233,7 +233,7 @@ CORS相关
 
 ### 二者在本质上没有区别，只是语义上并不相同
 
-GET 和 POST 只是 HTTP 协议中两种请求方式，而 HTTP 协议是基于 TCP/IP 的应用层协议，无论 GET 还是 POST，用的都是同一个传输层协议，所以在传输上，没有区别。GET和POST能做的事情是一样一样的。你要给GET加上request body，给POST带上url参数，技术上是完全行的通的。 二者的区别都是我们约定出来的。
+GET 和 POST 只是 HTTP 协议中两种请求方式，而 HTTP 协议是基于 TCP/IP 的应用层协议，无论 GET 还是 POST，用的都是同一个传输层协议，所以在传输上，没有区别。GET和POST能做的事情是一样一样的。你要给GET加上request body，给POST带上url参数，技术上是完全行的通的。 二者的区别都是我们约定出来的（浏览器和服务器共同遵循的约定）。
 
 ### 报文格式上的区别
 
@@ -244,6 +244,16 @@ GET 和 POST 只是 HTTP 协议中两种请求方式，而 HTTP 协议是基于 
 >GET方法请求报文第一行是这样的 GET /uri HTTP/1.1 \r\n
 
 带参数时报文的区别呢？ 在约定中，GET 方法的参数应该放在 url 中，POST 方法参数应该放在 body 中
+
+### 请求时的区别
+
+GET和POST还有一个重大区别，简单的说：
+
+GET产生一个TCP数据包，POST产生两个TCP数据包（并不是所有浏览器都会在POST中发送两次包，Firefox就只发送一次）
+
+长的说：
+
+对于GET方式的请求，浏览器会把http header和data一并发送出去，服务器响应200（返回数据），而对于POST，浏览器先发送header，服务器响应100 continue，浏览器再发送data，服务器响应200 ok（返回数据）。
 
 ### 应用中的区别
 
