--- a/notes/浏览器的进程与线程.md
+++ b/notes/浏览器的进程与线程.md
@@ -44,7 +44,8 @@
 
 - 当界面需要重绘（Repaint）或由于某种操作引发回流(reflow)时，该线程就会执行
 
-- 注意，GUI 渲染线程与 JS 引擎线程是互斥的，当 JS 引擎执行时 GUI 线程会被挂起（相当于被冻结了），GUI 更新会被保存在一个队列中等到 JS 引擎空闲时立即被执行
+- 注意，GUI 渲染线程与 JS 引擎线程是互斥的，当构建 DOM 树时碰到 js 代码时就会切换至JS 引擎线，所以 JS 引擎执行时 GUI 线程会被挂起（相当于被冻结了），GUI 更新会被保存在一个队列中等到 JS 引擎空闲时立即被执行
+
 
 ### JS 引擎线程
 
