--- a/notes/网络知识.md
+++ b/notes/网络知识.md
@@ -9,10 +9,33 @@
 - （TLS/SSL 在这里）
 - 应用层（HTTP, DNS, FTP, SMTP(邮件)）
 
-## DNS
-
-
 ## TCP
+
+### TCP 协议的特点
+
+1. 面向连接
+    
+    面向连接，是指发送数据之前必须在两端建立连接。建立连接的方法是“三次握手”，这样能建立可靠的连接。建立连接，是为数据的可靠传输打下了基础。
+
+2. 仅支持单播传输
+    
+    每条 TCP 传输连接只能有两个端点，只能进行点对点的数据传输，不支持多播和广播传输方式。
+
+3. 面向字节流
+  
+    TCP 不像 UDP 一样那样一个个报文独立地传输，而是在不保留报文边界的情况下以字节流方式进行传输。
+
+4. 可靠传输
+    
+    对于可靠传输，判断丢包，误码靠的是 TCP 的段编号以及确认号。TCP 为了保证报文传输的可靠，就给每个包一个序号，同时序号也保证了传送到接收端实体的包的按序接收。然后接收端实体对已成功收到的字节发回一个相应的确认(ACK)；如果发送端实体在合理的往返时延(RTT)内未收到确认，那么对应的数据（假设丢失了）将会被重传。
+
+5. 提供拥塞控制
+  
+    当网络出现拥塞的时候，TCP 能够减小向网络注入数据的速率和数量，缓解拥塞
+
+6. TCP 提供全双工通信
+    
+    TCP 允许通信双方的应用程序在任何时候都能发送数据，因为 TCP 连接的两端都设有缓存，用来临时存放双向通信的数据。当然，TCP 可以立即发送一个数据段，也可以缓存一段时间以便一次发送更多的数据段（最大的数据段大小取决于 MSS）
 
 ### TCP 三次握手
 
@@ -52,6 +75,43 @@
 - 第四次挥手：客户端收到 FIND=1 后，客户端还是怕由于网络不稳定的原因，怕服务端不知道他要断开连接，于是向服务端发送 ACK=1 确认信息进行确认，
   把自己设置成 TIME_WAIT 状态并启动定时器，如果服务端没有收到 ACK，服务端 TCP 的定时器到达后，会要求客户端重新发送 ACK，当服务端收到 ACK 后，服务端就断开连接；
   当客户端等待 2MLS（2 倍报文最大生存时间）后，没有收到服务端的重传请求后，他就知道服务端已收到了 ACK，所以客户端此时才关闭自己的连接。
+
+## DNS
+
+DNS (Domain Name System)， 也叫网域名称系统，是互联网的一项服务。它实质上是一个 域名 和 IP 相互映射的分布式数据库，有了它，我们就可以通过域名更方便的访问互联网。
+
+DNS服务 使用 UDP 协议发送查询请求。
+
+### 域名级别
+
+域名级别是网址分类的一个标准，包括顶级域名、二级域名等。一个完整的域名由二个或二个以上部分组成，各部分之间用英文的句号`.`来分隔，倒数第一个`.`的右边部分称为顶级域名（TLD，也称为一级域名，包含一个合法字符串，和一个域名后缀），顶级域名的左边部分字符串到下个`.`为止称为二级域名（SLD），二级域名的左边部分称为三级域名，以此类推，每一级的域名控制它下一级域名的分配。所有域名后面其实都有一个隐藏的`.`，代表根域名。
+
+拿 `www.baidu.com` 来说  顶级域名com 二级域名baidu 三级域名www
+
+### DNS解析流程
+
+默认是先查找hosts文件，如果没有匹配到，再进行DNS解析
+
+1. 客户端向本地DNS服务器(递归解析服务器) 发出解析 `www.baidu.com` 域名的请求
+2. 本地DNS服务器查看缓存，是否有缓存过 `www.baidu.com` 域名，如果有直接返回给客户端，如果没有执行下一步
+3. 本地DNS服务器向根域名服务器发送请求，查询 com 顶级域的 nameserver 地址
+4. 拿到com域名的IP后，再向 com nameserver 发送请求，获取 baidu 域名的nameserver 地址
+5. 继续请求 baidu 的 nameserver, 获取 www 域名的地址，最终得到了 `www.baidu.com` 的IP，本地DNS服务器把这个结果缓存起来，以供下次查询快速返回
+6. 本地DNS服务器把把结果返回给客户端
+
+### 递归服务器 与 权威域名服务器
+
+我们在解析流程中发现两类DNS服务器，客户端直接访问的是 递归解析服务器， 它在整个解析过程中也最忙。 它的查询步骤是递归的，从根域名服务器开始，一直询问到目标域名。
+
+递归解析服务器通过请求一级一级的权威域名服务器，获得下一目标的地址，直到找到目标域名的 权威域名服务器
+
+简单来说： 递归解析服务器 是负责解析域名的， 权威域名服务器 是负责存储域名记录的
+
+递归服务器一般由互联网服务提供商提供（电信移动联通）
+
+### 分级缓存
+
+由于整个解析过程非常复杂，所以DNS 通过缓存技术来实现服务的鲁棒性。 当递归nameserver解析过 `www.baidu.com` 域名后，再次收到 `www.baidu.com` 查询时，它不会再走一遍递归解析流程，而是把上一次解析结果的缓存直接返回。 并且它是分级缓存的，也就是说，当下次收到的是 `www.baidu.com` 的查询时， 由于这台递归解析服务器已经知道 `baidu.com` 的权威 nameserver, 所以它只需要再向 `baidu.com` nameserver 发送一个查询www的请求就可以了。
 
 ## HTTPS
 
