--- a/docs/notes/advanced/函数柯里化.md
+++ b/docs/notes/advanced/函数柯里化.md
@@ -1,1 +1,76 @@
-# 函数柯里化
+# 函数柯里化和偏函数
+
+## 柯里化
+
+柯里化是一种将使用多个参数的一个函数转换成一系列使用一个参数的函数的技术。
+
+一个简单的柯里化代码如下：
+
+```js
+function add(x, y, z) {
+  return x + y + z;
+}
+
+// 柯里化
+function curry(fn) {
+  return function next(...args) {
+    // 收集arg 直到args.length等于fn.length(也就是fn参数的数量)时执行fn
+    if (args.length === fn.length) {
+      return fn(...args);
+    } else {
+      return function(arg) {
+        return next(...args, arg);
+      };
+    }
+  };
+}
+
+var curryAdd = curry(add);
+curryAdd(1)(2)(3);
+```
+
+## 偏函数
+
+偏函数返回一个新的函数用来固定一个函数的一个或者多个参数，柯里化就是自动适应的偏函数
+
+```js
+function add(x, y, z) {
+  return x + y + z;
+}
+
+// 偏函数
+function partial(fn, ...args) {
+  return function(...newArgs) {
+    return fn(...args, ...newArgs);
+  };
+}
+
+var partialAdd = partial(add, 1, 2);
+partialAdd(3);
+```
+
+## 实现一个 add 函数
+
+一个无限累加的add函数，也用到了柯里化的思想，不过它是无限递归，需要手动调用我们定义的求值方法求值
+
+```js
+// 实现一个add方法，使计算结果能够满足如下预期：
+// add(1)(2)(3) = 6;
+// add(1, 2, 3)(4) = 10;
+// add(1)(2)(3)(4)(5) = 15;
+
+function add(...args) {
+  const _adder = (...newArgs) => {
+    args = args.concat(newArgs);
+    return _adder;
+  };
+  _adder.value = () => {
+    console.log(args)
+    return args.reduce((total, num) => {
+      return total += num;
+    }, 0);
+  };
+  return _adder
+}
+
+```
