--- a/docs/notes/browser/跨域与页面通信.md
+++ b/docs/notes/browser/跨域与页面通信.md
@@ -80,7 +80,7 @@
 - #### 和 Ajax 的对比
   JSONP 和 AJAX 相同，都是客户端向服务器端发送请求，从服务器端获取数据的方式。但 AJAX 属于同源策略，JSONP 属于非同源策略（跨域请求），JSONP 只支持 GET 方法
 - #### JSONP 的优缺点
-  JSONP 优点是简单兼容性好，可用于解决主流浏览器的跨域数据访问的问题（重点关照 IE10 以下）。缺点是仅支持 GET 方法具有局限性，不安全可能会遭受 XSS 攻击(如果服务器被黑返回了XSS代码，或者Content-Type没有定义好)。
+  JSONP 优点是简单兼容性好，可用于解决主流浏览器的跨域数据访问的问题（重点关照 IE10 以下）。缺点是仅支持 GET 方法具有局限性，不安全可能会遭受 XSS 攻击(如果服务器被黑返回了XSS代码，或者Content-Type没有定义好，定义成text/html浏览器就会渲染)。
 - #### JSONP 的实现流程
   - 声明一个回调函数，其函数名(如 show)当做参数值，要传递给跨域请求数据的服务器，函数形参为要获取目标数据(服务器返回的 data)。
   - 创建一个`<script>`标签，把那个跨域的 API 数据接口地址，赋值给 script 的 src,还要在这个地址中向服务器传递该函数名（可以通过问号传参:?callback=show）。
