--- a/docs/notes/browser/跨域与页面通信.md
+++ b/docs/notes/browser/跨域与页面通信.md
@@ -9,7 +9,7 @@
 
 ## 浏览器同源策略
 
-同源策略限制了从同一个源加载的文档或脚本如何与来自另一个源的资源进行交互。这是一个用于隔离潜在恶意文件的重要安全机制。
+同源策略限制了从同一个源加载的文档或脚本如何与来自另一个源的资源进行交互。这是一个用于隔离潜在恶意文件的重要安全机制。 
 
 同源是指"协议+域名+端口"三者相同，即便两个不同的域名指向同一个 ip 地址，也非同源。
 
@@ -23,6 +23,7 @@
 
 ## 为什么会有跨域
 
+主要是用来防止 CSRF 攻击的，如果没有跨域那么我可以在任何恶意网站携带着Cookie去请求安全网站的接口，或者在恶意网站中操作iframe里安全网站的DOM，假装自己是该安全网站的用户，请求接口完成操作
 
 ## 跨域解决方案
 
