--- a/docs/notes/others/前端性能优化.md
+++ b/docs/notes/others/前端性能优化.md
@@ -1,1 +1,177 @@
 # 前端性能优化
+
+## 一、缓存
+
+### 1. 本地数据存储
+
+对于一些请求，我们可以直接在业务代码侧进行缓存处理。缓存方式包括 localStorage、sessionStorage、indexedDB。把这块加入缓存的讨论也许会有争议，但利用好它确实能在程序侧达到一些类似缓存的能力。
+
+### 2. 内存缓存
+
+当你访问一个页面及其子资源时，有时候会出现一个资源被使用多次，例如图标。由于该资源已经存储在内存中，再去请求反而多此一举，浏览器内存则是最近、最快的响应场所。内存缓存并无明确的标准规定，它与 HTTP 语义下的缓存关联性不大，算是浏览器帮我们实现的优化，很多时候其实我们意识不到。
+
+### 3. Service Worker 和 Cache API
+
+当我们没有命中内存缓存时，是否就开始发送请求了呢？其实不一定。
+
+在这时我们还可能会碰到 Cache API (ServiceWorkerGlobalScope.caches) 里的缓存，提到它就不得不提一下 Service Worker 了
+
+首先明确一下，这层的缓存没有规定说该缓存什么、什么情况下需要缓存，它只是提供给了客户端构建请求缓存机制的能力。如果你对 PWA 或者 Service Worker 很了解，应该非常清楚是怎么一回事。如果不了解也没有关系，我们可以简单看一下：
+
+首先，Service Worker 是一个后台运行的独立线程，可以在代码中启用
+```js
+// index.js
+if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('./sw.js').then(function () {
+        // 注册成功
+    });
+}
+```
+之后需要处理一些 Service Worker 的生命周期事件，而其中与这里提到的缓存功能直接相关的则是请求拦截：
+```js
+// sw.js
+self.addEventListener('fetch', function (e) {
+    // 如果有cache则直接返回，否则通过fetch请求
+    e.respondWith(
+        caches.match(e.request).then(function (cache) {
+            return cache || fetch(e.request);
+        }).catch(function (err) {
+            console.log(err);
+            return fetch(e.request);
+        })
+    );
+});
+```
+以上代码会拦截所有的网络请求，查看是否有缓存的请求内容，如果有则返回缓存，否则会继续发送请求。与内存缓存不同，Cache API 提供的缓存可以认为是“永久性”的，关闭浏览器或离开页面之后，下次再访问仍然可以使用。
+
+### 4. HTTP 缓存
+
+### 5. Push Cache
+
+假如很不幸，以上这些缓存你都没有命中，那么你将会碰到最后一个缓存检查 —— Push Cache。
+
+Push Cache 其实是 HTTP/2 的 Push 功能所带来的。简言之，过去一个 HTTP 的请求连接只能传输一个资源，而现在你在请求一个资源的同时，服务端可以为你“推送”一些其他资源 —— 你可能在在不久的将来就会用到一些资源。例如，你在请求 www.sample.com 时，服务端不仅发送了页面文档，还一起推送了 关键 CSS 样式表。这也就避免了浏览器收到响应、解析到相应位置时才会请求所带来的延后。
+
+## 二、网络优化
+
+### 1. DNS 预解析
+
+DNS 解析流程可能会很长，耗时很高，所以整个 DNS 服务，包括客户端都会有缓存机制
+
+DNS Prefetch 就是浏览器提供给我们的一个 API。它是 Resource Hint 的一部分。它可以告诉浏览器：过会我就可能要去 yourwebsite.com 上下载一个资源啦，帮我先解析一下域名吧。这样之后用户点击某个按钮，触发了 yourwebsite.com 域名下的远程请求时，就略去了 DNS 解析的步骤。使用方式很简单：
+```html
+<link rel="dns-prefetch" href="//yourwebsite.com">
+```
+
+### 2. 预先建立连接
+
+我们知道，建立连接不仅需要 DNS 查询，还需要进行 TCP 协议握手，有些还会有 TLS/SSL 协议，这些都会导致连接的耗时。使用 Preconnect 可以帮助你告诉浏览器：“我有一些资源会用到某个源（origin），你可以帮我预先建立连接。”
+
+根据规范，当你使用 Preconnect 时，浏览器大致做了如下处理：
+
+- 首先，解析 Preconnect 的 url；
+- 其次，根据当前 link 元素中的属性进行 cors 的设置；
+- 然后，默认先将 credential 设为 true，如果 cors 为 Anonymous 并且存在跨域，则将 credential 置为 false；
+- 最后，进行连接。
+使用 Preconnect 只需要将 rel 属性设为 preconnect 即可：
+
+```html
+<link rel="preconnect" href="//sample.com">
+```
+
+### 3. 使用 CDN
+
+当我们实际把网络包发向我们的目标地址时，肯定希望越快到达目的地越好（对应的，也会希望越快获得响应）。而网络传输是有极限的，同样一个北京的用户，访问北京的服务器显然要比广州快很多。同时，服务的负载也会影响响应的速度。
+
+对于静态资源，我们可以考虑通过 CDN 来降低时延。
+
+对于使用 CDN 的资源，DNS 解析会将 CDN 资源的域名解析到 CDN 服务的负载均衡器上，负载均衡器可以通过请求的信息获取用户对应的地理区域，从而通过负载均衡算法，在背后的诸多服务器中，综合选择一台地理位置近、负载低的机器来提供服务。例如为北京联通用户解析北京的服务器 IP。这样，用户在之后访问 CDN 资源时都是访问北京服务器，距离近，速度快。
+
+### 4. BFF 聚合接口
+
+BFF 非常合适做的一件事就是后端服务的聚合。
+
+如果你有一个两个接口服务：第一个服务是先获取产品信息，再根据产品信息中的上架时间通过第二个服务获取该时间后的产品列表。这个业务逻辑如果放在前端（浏览器）处理将会串行发送两个请求。假设每个请求 200ms，那么就需要等待 400ms。如果引入 NodeJS，这一层可以放在 NodeJS 中实现。NodeJS 部署的位置一般离其他后端服务“更近”，例如同一个局域网。这类服务间的请求耗时显然更低，可能只需要 200(浏览器) + 30(NodeJS) * 2 = 260ms。
+
+此外，如果一个业务需要在前端并发三、四个请求来获取完整数据，那么放在 NodeJS 的 BFF 层也是一个不错的选择。
+
+### 5. 避免过多的重定向
+
+
+## 三、静态资源加载
+
+### 1. 压缩
+
+启用gzip压缩。
+
+### 2. 合并请求
+
+对与体积小的零碎的资源文件，可以合并成大的资源文件，减少请求的数量。比如雪碧图。
+
+### 3. 异步加载js脚本，代码分割
+
+注意`<script></script>`对DOM渲染的阻塞，如果是SPA可以进行代码分割按需加载。
+
+### 4. 懒加载
+
+对于初始渲染用不到的资源文件，可以延迟加载。
+
+### 5. 预加载
+
+预加载相当于是快用户一步，在空闲的时候就把用户即将用到的资源加载完，等用户实际需要使用时，资源已经存在在本地，自然就跳过了整个加载的等待时间。
+
+#### prefetch
+
+你可以把 Prefetch 理解为资源预获取。一般来说，可以用 Prefetch 来指定在紧接着之后的操作或浏览中需要使用到的资源，让浏览器提前获取。由于仅仅是提前获取资源，因此浏览器不会对资源进行预处理，并且像 CSS 样式表、JavaScript 脚本这样的资源是不会自动执行并应用于当前文档的。其中 as 属性用于指定资源的类型，与 Preload 规范一致，基本涵盖了所有资源类型
+
+```html
+<link rel="prefetch" href="/prefetch.js" as="script">
+```
+
+#### Prerender
+
+Prerender 比 Prefetch 更进一步，可以粗略地理解不仅会预获取，还会预执行。
+
+如果你指定 Prerender 一个页面，那么它依赖的其他资源，像 `<script>`、`<link>` 等页面所需资源也可能会被下载与处理。但是预处理会基于当前机器、网络情况的不同而被不同程度地推迟。例如，会根据 CPU、GPU 和内存的使用情况，以及请求操作的幂等性而选择不同的策略或阻止该操作。
+
+```html
+<link rel="prerender" href="//sample.com/nextpage.html">
+```
+
+#### Preload
+
+在遇到需要 Preload 的资源时，浏览器会 立刻 进行预获取，并将结果放在内存中，资源的获取不会影响页面 parse 与 load 事件的触发。直到再次遇到该资源的使用标签时，才会执行。由于我们会将 `<script>` 标签置于 `<body>` 底部来保证性能，因此可以考虑在 `<head>` 标签中适当添加这些资源的 Preload 来加速页面的加载与渲染。
+
+```html
+<link rel="preload" href="./nextpage.js" as="script">
+```
+
+与 Prefetch 相比，Preload 会强制浏览器立即获取资源，并且该请求具有较高的优先级（mandatory and high-priority），因此建议对一些当前页面会马上用到资源使用 Preload；相对的，Prefetch 的资源获取则是可选与较低优先级的，其是否获取完全取决于浏览器的决定，适用于预获取将来可能会用到的资源。
+
+### 6. 把CSS放到顶部
+
+网页上的资源加载时从上网下顺序加载的，所以css放在页面的顶部能够优先渲染页面，让用户感觉页面加载很快。
+
+### 7. 把JS放到底部
+
+加载js时会对后续的资源造成阻塞，必须得等js加载完才去加载后续的文件 ，所以就把js放在页面底部最后加载。
+
+### 8. 使用无cookie的域
+
+比如CSS、js、图片等，客户端请求静态文件的时候，减少了 Cookie 的反复传输对主域名的影响。
+
+## 四、运行中优化
+
+### 1. 耗时JS计算放入web worker中
+
+### 2. 使用 requestAnimationFrame 生成动画
+
+### 3. 避免回流和重绘
+
+### 4. 防抖和节流
+
+### 5. 事件委托
+
+### 6. 缓存DOM，批量操作
+
+### 7. 开启 GPU 加速
