--- a/docs/notes/others/面试题整理.md
+++ b/docs/notes/others/面试题整理.md
@@ -219,3 +219,17 @@ Object.is(0, -0) // false
 ```
 
 当然+0与-0的存在也不是完全没有用处，我们有时会用符号位存储一些信息，比较向量或速度的方向信息,如速度-0,负号代表着运动的方向，保留了负号位可以防止这些信息的丢失。
+
+## Q10：for...in 和 for...of 的比较
+
+for...in的缺点
+
+- 数组的键名是数字，但是for...in循环是以字符串作为键名“0”、“1”、“2”等等。
+- for...in循环不仅遍历数字键名，还会遍历手动添加的其他键，甚至包括原型链上的键。
+- 某些情况下，for...in循环会以任意顺序遍历键名。
+- for...in循环主要是为遍历对象而设计的，不适用于遍历数组。
+
+for...of的优点
+
+- 有着同for...in一样的简洁语法，但是没有for...in那些缺点，可以遍历数组和各种数据结构。
+- 提供了遍历所有数据结构的统一操作接口。
