--- a/docs/notes/advanced/深拷贝.md
+++ b/docs/notes/advanced/深拷贝.md
@@ -31,7 +31,9 @@ deepClone(obj); //报错: RangeError: Maximum call stack size exceeded
 
 这就是循环引用。我们怎么来解决这个问题呢？
 
-创建一个 Map，记录下已经拷贝过的对象，如果说已经拷贝过，那直接返回它行了。
+创建一个 Map，记录下已经拷贝过的对象，如果说已经拷贝过，那直接返回它行了
+
+然后注意一下 `null` 和 `function`
 
 ```js
 const isObject = target =>
@@ -79,7 +81,5 @@ const deepClone = (target, map = new WeakMap()) => {
 然后就是 `for...in` 的性能堪忧，我们可以换成 `while` 循环
 
 ## 特殊对象类型
-
-然后就是注意 `null` 和 `function`
 
 剩下的就是各种特殊对象的拷贝
