--- a/docs/notes/browser/浏览器的渲染原理.md
+++ b/docs/notes/browser/浏览器的渲染原理.md
@@ -82,15 +82,15 @@
 
 - 两个 absolute 定位的 div 在屏幕上交叠了，根据 z-index 的关系，其中一个 div 就会”盖在“了另外一个上边。
 
-    <img src="/img/explore/render_1.jpg" />
+    <img src="/Learning-notes/img/explore/render_1.jpg" />
 
 - 这个时候，如果处于下方的 div 被加上了 CSS 属性：transform: translateZ(0)，就会被浏览器提升为合成层。提升后的合成层位于 Document 上方，假如没有隐式合成，原本应该处于上方的 div 就依然还是跟 Document 共用一个 GraphicsLayer，层级反而降了，就出现了元素交叠关系错乱的问题。
 
-    <img src="/img/explore/render_2.jpg" />
+    <img src="/Learning-notes/img/explore/render_2.jpg" />
 
 - 所以为了纠正错误的交叠顺序，浏览器必须让原本应该”盖在“它上边的渲染层也同时提升为合成层。
 
-    <img src="/img/explore/render_3.jpg">
+    <img src="/Learning-notes/img/explore/render_3.jpg">
 
 ## 层压缩
 
