--- a/docs/notes/others/前端性能优化.md
+++ b/docs/notes/others/前端性能优化.md
@@ -97,6 +97,8 @@ BFF 非常合适做的一件事就是后端服务的聚合。
 
 ### 5. 避免过多的重定向
 
+无谓的重定向会增加请求耗时。
+
 
 ## 三、静态资源加载
 
@@ -108,9 +110,9 @@ BFF 非常合适做的一件事就是后端服务的聚合。
 
 对与体积小的零碎的资源文件，可以合并成大的资源文件，减少请求的数量。比如雪碧图。
 
-### 3. 异步加载js脚本，代码分割
+### 3. 代码分割
 
-注意`<script></script>`对DOM渲染的阻塞，如果是SPA可以进行代码分割按需加载。
+如果是SPA且bundle体积过大的话可以进行代码分割按需加载。
 
 ### 4. 懒加载
 
@@ -120,33 +122,33 @@ BFF 非常合适做的一件事就是后端服务的聚合。
 
 预加载相当于是快用户一步，在空闲的时候就把用户即将用到的资源加载完，等用户实际需要使用时，资源已经存在在本地，自然就跳过了整个加载的等待时间。
 
-#### prefetch
+- #### prefetch
 
-你可以把 Prefetch 理解为资源预获取。一般来说，可以用 Prefetch 来指定在紧接着之后的操作或浏览中需要使用到的资源，让浏览器提前获取。由于仅仅是提前获取资源，因此浏览器不会对资源进行预处理，并且像 CSS 样式表、JavaScript 脚本这样的资源是不会自动执行并应用于当前文档的。其中 as 属性用于指定资源的类型，与 Preload 规范一致，基本涵盖了所有资源类型
+    你可以把 Prefetch 理解为资源预获取。一般来说，可以用 Prefetch 来指定在紧接着之后的操作或浏览中需要使用到的资源，让浏览器提前获取。由于仅仅是提前获取资源，因此浏览器不会对资源进行预处理，并且像 CSS 样式表、JavaScript 脚本这样的资源是不会自动执行并应用于当前文档的。其中 as 属性用于指定资源的类型，与 Preload 规范一致，基本涵盖了所有资源类型
 
-```html
-<link rel="prefetch" href="/prefetch.js" as="script">
-```
+    ```html
+    <link rel="prefetch" href="/prefetch.js" as="script">
+    ```
 
-#### Prerender
+- #### Prerender
 
-Prerender 比 Prefetch 更进一步，可以粗略地理解不仅会预获取，还会预执行。
+    Prerender 比 Prefetch 更进一步，可以粗略地理解不仅会预获取，还会预执行。
 
-如果你指定 Prerender 一个页面，那么它依赖的其他资源，像 `<script>`、`<link>` 等页面所需资源也可能会被下载与处理。但是预处理会基于当前机器、网络情况的不同而被不同程度地推迟。例如，会根据 CPU、GPU 和内存的使用情况，以及请求操作的幂等性而选择不同的策略或阻止该操作。
+    如果你指定 Prerender 一个页面，那么它依赖的其他资源，像 `<script>`、`<link>` 等页面所需资源也可能会被下载与处理。但是预处理会基于当前机器、网络情况的不同而被不同程度地推迟。例如，会根据 CPU、GPU 和内存的使用情况，以及请求操作的幂等性而选择不同的策略或阻止该操作。
 
-```html
-<link rel="prerender" href="//sample.com/nextpage.html">
-```
+    ```html
+    <link rel="prerender" href="//sample.com/nextpage.html">
+    ```
 
-#### Preload
+- #### Preload
 
-在遇到需要 Preload 的资源时，浏览器会 立刻 进行预获取，并将结果放在内存中，资源的获取不会影响页面 parse 与 load 事件的触发。直到再次遇到该资源的使用标签时，才会执行。由于我们会将 `<script>` 标签置于 `<body>` 底部来保证性能，因此可以考虑在 `<head>` 标签中适当添加这些资源的 Preload 来加速页面的加载与渲染。
+    在遇到需要 Preload 的资源时，浏览器会 立刻 进行预获取，并将结果放在内存中，资源的获取不会影响页面 parse 与 load 事件的触发。直到再次遇到该资源的使用标签时，才会执行。由于我们会将 `<script>` 标签置于 `<body>` 底部来保证性能，因此可以考虑在 `<head>` 标签中适当添加这些资源的 Preload 来加速页面的加载与渲染。
 
-```html
-<link rel="preload" href="./nextpage.js" as="script">
-```
+    ```html
+    <link rel="preload" href="./nextpage.js" as="script">
+    ```
 
-与 Prefetch 相比，Preload 会强制浏览器立即获取资源，并且该请求具有较高的优先级（mandatory and high-priority），因此建议对一些当前页面会马上用到资源使用 Preload；相对的，Prefetch 的资源获取则是可选与较低优先级的，其是否获取完全取决于浏览器的决定，适用于预获取将来可能会用到的资源。
+    与 Prefetch 相比，Preload 会强制浏览器立即获取资源，并且该请求具有较高的优先级（mandatory and high-priority），因此建议对一些当前页面会马上用到资源使用 Preload；相对的，Prefetch 的资源获取则是可选与较低优先级的，其是否获取完全取决于浏览器的决定，适用于预获取将来可能会用到的资源。
 
 ### 6. 把CSS放到顶部
 
@@ -164,14 +166,57 @@ Prerender 比 Prefetch 更进一步，可以粗略地理解不仅会预获取，
 
 ### 1. 耗时JS计算放入web worker中
 
+web worker 是渲染进程中JS引擎线程之外的新的线程，不会像JS引擎线程一样造成 GUI 渲染线程的阻塞。
+
 ### 2. 使用 requestAnimationFrame 生成动画
+
+requestAnimationFrame 中的回调在浏览器下一帧渲染之前调用，丝滑~
 
 ### 3. 避免回流和重绘
 
-### 4. 防抖和节流
+CSS方面：
 
-### 5. 事件委托
+- 避免使用table布局
+  
+- 尽可能在DOM树的最末端改变class
+  
+- 避免设置多层内联样式
+  
+- 将动画效果应用到position属性为absolute或fixed的元素上（脱离文档流以避免父元素及相邻元素的回流）
+  
+- 避免使用CSS表达式（例如：calc()）
 
-### 6. 缓存DOM，批量操作
+JS方面
+
+- 合并你所有可能触发回流的操作（包括操作DOM，添加class，修改style）
+  
+- 可以先为元素设置display: none，操作结束后再把它显示出来。因为在display属性为none的元素上进行的DOM操作不会引发回流和重绘。
+
+- 避免频繁调用会引发回流的API(如 getBoundingClientRect )，可以用一个变量缓存起来
+
+### 4. 使用防抖和节流
+
+详见 节流和防抖 一节
+
+### 5. 使用事件委托
+
+事件委托的好处多多
+
+- 首先可以监听后插入的子元素的事件
+- 其次移除事件非常方便，写起来也很简洁，性能也更优秀
+
+### 6. 缓存DOM引用，批量操作，
+
+但也不要同一时间大量操作DOM，司徒正妹测试过: 同时插入1w条列表项不如间隔几ms每次插入100个，要给浏览器喘息的时间。
 
 ### 7. 开启 GPU 加速
+
+实际就是将**渲染层**提升为**合成层**，详见 浏览器渲染原理 一节
+
+## 五、首屏优化
+
+### 1. 预渲染
+
+### 2. 加入骨架屏
+
+### 3. 放大招，服务端渲染（SSR）
