--- a/docs/notes/advanced/常见算法.md
+++ b/docs/notes/advanced/常见算法.md
@@ -1,1 +1,27 @@
 # 常见算法
+
+## 冒泡排序
+
+```js
+const bubbleSort = arr => {
+  for (let i = 0; i < arr.length - 1; i++) {
+    for (let j = 0; j < arr.length - i; j++) {
+      if (arr[j] > arr[j + 1]) {
+        let temp = arr[j];
+        arr[j] = arr[j + 1];
+        arr[j + 1] = temp;
+      }
+    }
+  }
+  return arr;
+};
+```
+
+## 选择排序
+
+```js
+```
+
+## 快排
+
+## 洗牌算法
