--- a/docs/notes/browser/浏览器的进程与线程.md
+++ b/docs/notes/browser/浏览器的进程与线程.md
@@ -57,7 +57,7 @@
 
 - 注意，GUI 渲染线程与 JS 引擎线程是互斥的，所以如果 JS 执行的时间过长，这样就会造成页面的渲染不连贯，导致页面渲染加载阻塞
 
-### 事件触发线程
+### 事件触发线程（ 用于 EventLoop ）
 
 - 归属于浏览器而不是 JS 引擎，用来控制事件循环（可以理解，JS 引擎自己都忙不过来，需要浏览器另开线程协助）
 
