--- a/docs/notes/browser/浏览器缓存策略.md
+++ b/docs/notes/browser/浏览器缓存策略.md
@@ -6,6 +6,8 @@
 
 >浏览器命中强缓存时则不发送请求到服务器，直接读取内存或磁盘中缓存的资源文件
 
+对于常规请求, 只要存在该资源的缓存, 且 Cache-Control:max-age 或者 expires 没有过期, 那么就能命中强缓存.
+
 ### Cache-Control(重要策略)
 
 - max-age（单位为s）指定设置缓存最大的有效时间，定义的是时间长短。当浏览器向服务器发送请求后，在max-age这段时间里浏览器就不会再向服务器发送请求了。
