--- a/docs/notes/others/前端性能优化.md
+++ b/docs/notes/others/前端性能优化.md
@@ -34,25 +34,26 @@ self.addEventListener('fetch', function (e) {
 ```
 以上代码会拦截所有的网络请求，查看是否有缓存的请求内容，如果有则返回缓存，否则会继续发送请求。与内存缓存不同，Cache API 提供的缓存可以认为是“永久性”的，关闭浏览器或离开页面之后，下次再访问仍然可以使用。
 
-### 2. 内存缓存 Memory Cache
+### 2. 强缓存
+
+1. 内存缓存 Memory Cache
 
 当你访问一个页面及其子资源时，有时候会出现一个资源被使用多次，例如图标。由于该资源已经存储在内存中，再去请求反而多此一举，浏览器内存则是最近、最快的响应场所。内存缓存并无明确的标准规定，它与 HTTP 语义下的缓存关联性不大，算是浏览器帮我们实现的优化，很多时候其实我们意识不到。
 
-### 3. 磁盘缓存 Disk Cache
-
+2. 磁盘缓存 Disk Cache
 Disk Cache 也就是存储在硬盘中的缓存，读取速度慢点，但是什么都能存储到磁盘中，比之 Memory Cache 胜在容量和存储时效性上。
 
 在所有浏览器缓存中，Disk Cache 覆盖面基本是最大的。它会根据 HTTP Herder 中的字段判断哪些资源需要缓存，哪些资源可以不请求直接使用，哪些资源已经过期需要重新请求。并且即使在跨站点的情况下，相同地址的资源一旦被硬盘缓存下来，就不会再次去请求数据。绝大部分的缓存都来自 Disk Cache，关于 HTTP 的协议头中的缓存字段，我们会在下文进行详细介绍。
 
-### 4. Push Cache
-
-假如很不幸，以上这些缓存你都没有命中，那么你将会碰到最后一个缓存检查 —— Push Cache。
+### 3. Push Cache
 
 Push Cache 其实是 HTTP/2 的 Push 功能所带来的。简言之，过去一个 HTTP 的请求连接只能传输一个资源，而现在你在请求一个资源的同时，服务端可以为你“推送”一些其他资源 —— 你可能在在不久的将来就会用到一些资源。例如，你在请求 www.sample.com 时，服务端不仅发送了页面文档，还一起推送了 关键 CSS 样式表。这也就避免了浏览器收到响应、解析到相应位置时才会请求所带来的延后。
 
-### 4. HTTP 缓存
+### 4. 协商缓存
 
-如果以上四种缓存都没有命中的话，那么只能发起请求来获取资源了。
+如果以上三种缓存都没有命中的话，那么只能发起请求来获取资源了。
+
+浏览器会自动往 request header 中添加 If-None-Match 或者 If-Modified-Since 字段，服务器则根据资源的 ETag 与 Last-Modified 判断是否命中协商缓存。是的话，返回304，否的话，返回新的资源和新的缓存信息
 
 ## 二、网络优化
 
