--- a/docs/notes/advanced/函数柯里化.md
+++ b/docs/notes/advanced/函数柯里化.md
@@ -51,7 +51,7 @@ partialAdd(3);
 
 ## 实现一个 add 函数
 
-一个无限累加的add函数，也用到了柯里化的思想，不过它是无限递归，需要手动调用我们定义的求值方法求值
+一个无限累加的 add 函数，也用到了柯里化的思想，不过它是无限递归，需要手动调用我们定义的求值方法求值，在这里我们利用了隐式类型转换
 
 ```js
 // 实现一个add方法，使计算结果能够满足如下预期：
@@ -64,13 +64,12 @@ function add(...args) {
     args = args.concat(newArgs);
     return _adder;
   };
-  _adder.value = () => {
-    console.log(args)
-    return args.reduce((total, num) => {
-      return total += num;
-    }, 0);
+  _adder.valueOf = () => {
+    return args.reduce((a, b) => {
+      return a + b;
+    });
   };
-  return _adder
+  return _adder;
 }
-
+console.log(add(1)(2)(3)(4)(5) == 15) // true
 ```
