--- a/docs/notes/others/模块加载机制.md
+++ b/docs/notes/others/模块加载机制.md
@@ -75,5 +75,36 @@ AMD 和 CMD 都是用于浏览器端的模块规范，而在服务器端比如 n
 
 > 值得注意的是 exports 实际上就是 module.exports 的引用，你可以给exports添加属性，但是不能重新赋值，因为这样会使exports失去 对 module.exports 的引用
 
+## UMD
+
+UMD 是 AMD 和 CommonJS 的综合产物。如上所说，AMD 的用武之地是浏览器，非阻塞式加载。CommonJS 主要用于服务端 Nodejs 中使用。所以人们就想到了一个通用的模式 UMD（universal module definition）。来解决跨平台的问题。
+
+没错！就是 ifElse 的写法。
+
+核心思想就是：先判断是否支持Node.js的模块（exports）是否存在，存在则使用Node.js模块模式。
+
+在判断是否支持AMD（define是否存在），存在则使用AMD方式加载模块。
+
 ## ES Modules
-不需要多讲了
+
+不需要多讲了，这里我们说一下和 CommonJS 的区别:
+
+- CommonJS 模块输出的是一个值的拷贝，ES6 模块输出的是值的引用（你 import 过来之后操作原文件也可能会改变）。
+
+- CommonJS 模块是运行时加载，ES6 模块是编译时输出接口。
+
+ES Modules 是编译时输出接口，有如下两个特点:
+
+1. import 命令会被 JS 引擎静态分析，优先于模块内的其他内容执行（tree shaking 就是利用 ES Modules 的静态性进行分析处理的）
+
+2. export 命令会有变量声明提升的效果，所以import 和 export 命令在模块中的位置并不影响程序的输出。
+
+二者在循环加载的处理上也有差异
+
+“循环加载”（circular dependency）指的是，a脚本的执行依赖b脚本，而b脚本的执行又依赖a脚本。
+
+循环加载如果处理不好，还可能导致递归加载，使得程序无法执行，因此应该避免出现。
+
+在 CommonJS 中，脚本代码在 require 的时候，就会全部执行。一旦出现某个模块被"循环加载"，就只输出已经执行的部分（执行到循环引用的那个点），还未执行的部分不会输出。
+
+ES6 处理“循环加载”与 CommonJS 有本质的不同。ES6 模块是动态引用，如果使用import从一个模块加载变量（即import foo from 'foo'），那些变量不会被缓存，而是成为一个指向被加载模块的引用。也就是说每一个模块加载多次，JS只执行一次 如果下次再去加载同目录下同文件，直接从内存中读取，一个模块就是一个单例，或者说就是一个对象。如果出现循环引用的情况，需要开发者自己保证，真正取值的时候能够取到值。
