--- a/docs/notes/others/面试题整理.md
+++ b/docs/notes/others/面试题整理.md
@@ -291,6 +291,10 @@ BFC布局规范:
 3. BFC 的区域不会与浮动元素重叠，计算 BFC 的高度时，浮动元素也参与计算
 4. BFC 就是页面上的一个隔离的独立容器，容器里面的子元素不会影响到外面的元素的布局，反之也如此
 
+BFC解决的问题：
+1. 解决浮动塌陷
+2. 解决外边距重叠
+
 ## Q12: 谈谈 React 新的生命周期
 
 在 componentWillReceiveProps(prevProps, nextProps) 中根据 props 更新 state 并不是一个最好的方案，它可能会包含一些副作用。
