--- a/docs/notes/advanced/原型链与继承.md
+++ b/docs/notes/advanced/原型链与继承.md
@@ -1,47 +1,126 @@
 # 原型链继承
 
+## 原型链继承
+
+```js
+function Parent(name) {
+  this.name = name;
+}
+
+Parent.prototype.getName = function() {
+  console.log(this.name);
+};
+
+function Child() {}
+
+Child.prototype = new Parent("Bob");
+
+var child1 = new Child();
+
+console.log(child1.getName()); // kevin
+```
+
+缺点：
+
+- 引用类型的属性被所有实例共享
+- 在创建 Child 的实例时，不能向 Parent 传参
+
+## 构造函数继承
+
+```js
+function Parent() {
+  this.names = ["kevin", "daisy"];
+}
+
+function Child() {
+  Parent.call(this);
+}
+
+var child1 = new Child();
+```
+
+优点：
+
+- 避免了引用类型的属性被所有实例共享
+- 可以在 Child 中向 Parent 传参
+  缺点：
+- 方法都在构造函数中定义，每次创建实例都会创建一遍方法
+
+## 组合式继承
+
+原型链继承 + 构造函数继承
+
+```js
+function Parent(name) {
+  this.name = name;
+  this.colors = ["red", "blue", "green"];
+}
+
+Parent.prototype.getName = function() {
+  console.log(this.name);
+};
+
+function Child(name, age) {
+  Parent.call(this, name);
+  this.age = age;
+}
+
+Child.prototype = new Parent();
+Child.prototype.constructor = Child;
+
+var child1 = new Child("kevin", "18");
+```
+
+优点：
+
+- 融合原型链继承和构造函数的优点，是 JavaScript 中最常用的继承模式
+  缺点：
+- 会调用两次父构造函数。
+
 ## 寄生组合式继承
 
 ```js
-function Parent (name) {
-    this.name = name;
+function Parent(name) {
+  this.name = name;
 }
 
-Parent.prototype.getName = function () {
-    console.log(this.name)
-}
+Parent.prototype.getName = function() {
+  console.log(this.name);
+};
 
-function Child (name, age) {
-    Parent.call(this, name);
-    this.age = age;
+function Child(name, age) {
+  Parent.call(this, name);
+  this.age = age;
 }
 
 Child.prototype = Object.create(Parent.prototype);
 
-var child1 = new Child('kevin', '18');
+var child1 = new Child("kevin", "18");
 
 console.log(child1);
 ```
 
-es6 中的 extends就是这种实现方式的语法糖
+优点：这种方式的高效率体现它只调用了一次 Parent 构造函数，并且因此避免了在 Parent.prototype 上面创建不必要的、多余的属性。与此同时，原型链还能保持不变；因此，还能够正常使用 instanceof 和 isPrototypeOf。开发人员普遍认为寄生组合式继承是引用类型最理想的继承范式。
+
+es6 中的 extends 就是这种实现方式的语法糖
 
 上面的代码等价于
 
 ```js
 class Parent {
-    constructor(name) {
-        this.name = name;
-    }
+  constructor(name) {
+    this.name = name;
+  }
 }
 
 class Child extends Parent {
-    constructor(name, age) {
-        super(name); // 调用父类的 constructor(name)
-        this.age = age;
-    }
+  constructor(name, age) {
+    super(name); // 调用父类的 constructor(name)
+    this.age = age;
+  }
 }
 
-var child1 = new Child('kevin', '18');
+var child1 = new Child("kevin", "18");
 
 console.log(child1);
 ```
