--- a/docs/notes/advanced/常见算法.md
+++ b/docs/notes/advanced/常见算法.md
@@ -3,16 +3,21 @@
 ## 冒泡排序
 
 ```js
+function swap(arr, a, b) {
+  let temp = arr[a];
+  arr[a] = arr[b];
+  arr[b] = temp;
+}
+
 const bubbleSort = arr => {
   for (let i = 0; i < arr.length - 1; i++) {
     for (let j = 0; j < arr.length - i; j++) {
       if (arr[j] > arr[j + 1]) {
-        let temp = arr[j];
-        arr[j] = arr[j + 1];
-        arr[j + 1] = temp;
+        swap(arr, j, j+1)
       }
     }
   }
+  
   return arr;
 };
 ```
@@ -20,8 +25,95 @@ const bubbleSort = arr => {
 ## 选择排序
 
 ```js
+
+function swap(arr, a, b) {
+  let temp = arr[a];
+  arr[a] = arr[b];
+  arr[b] = temp;
+}
+
+const selectionSort = arr => {
+  let minIdx, temp;
+  for (let i = 0; i < arr.length - 1; i++) {
+    minIdx = i;
+    // 遍历剩余数组元素找出最小数的下标
+    for (let j = i + 1; j < arr.length; j++) {
+      if (arr[j] < arr[minIdx]) {
+        minIdx = j;
+      }
+    }
+    // 将最小数移到剩余元素的最左边
+    swap(arr, i, minIdx)
+  }
+  return arr;
+};
 ```
 
-## 快排
+## 非原地快排
+
+```js
+const quickSort = arr => {
+  if (arr.length <= 1) {
+    return arr;
+  }
+  // 取数组的中间元素作为基准（这个基准可以随便取）
+  const pivotIndex = Math.floor(arr.length / 2);
+  const pivot = arr.splice(pivotIndex, 1)[0];
+
+  const left = [];
+  const right = [];
+
+  for (let i = 0; i < arr.length; i++) {
+    if (arr[i] < pivot) {
+      left.push(arr[i]);
+    } else {
+      right.push(arr[i]);
+    }
+  }
+
+  return quickSort(left).concat([pivot], quickSort(right));
+};
+```
+
+## 原地快排
+
+```js
+function quickSort(arr) {
+  // 交换元素
+  function swap(arr, a, b) {
+    let temp = arr[a];
+    arr[a] = arr[b];
+    arr[b] = temp;
+  }
+
+  function partition(arr, left, right) {
+    const pivot = arr[left];
+    const storeIndex = left;
+    // 找出比数组中比 pivot 小的元素，交换到数组的左侧
+    for (let i = left + 1; i <= right; i++) {
+      if (arr[i] < pivot) {
+        swap(arr, storeIndex, i);
+        storeIndex++;
+      }
+    }
+    // 将 pivot 的下标改为 storeIndex
+    swap(arr, left, storeIndex);
+    // 现在这个 storeIndex 就是绝对的中位数 index
+    return storeIndex;
+  }
+
+  function sort(arr, left, right) {
+    if (left < right) {
+      const storeIndex = partition(arr, left, right);
+      sort(arr, left, storeIndex - 1);
+      sort(arr, storeIndex + 1, right);
+    }
+  }
+
+  sort(arr, 0, arr.length - 1);
+
+  return arr;
+}
+```
 
 ## 洗牌算法
