--- a/docs/notes/advanced/原型链与继承.md
+++ b/docs/notes/advanced/原型链与继承.md
@@ -1,4 +1,4 @@
-# 原型链继承
+# 继承
 
 ## 原型链继承
 
@@ -43,7 +43,9 @@ var child1 = new Child();
 
 - 避免了引用类型的属性被所有实例共享
 - 可以在 Child 中向 Parent 传参
-  缺点：
+
+缺点：
+
 - 方法都在构造函数中定义，每次创建实例都会创建一遍方法
 
 ## 组合式继承
@@ -74,7 +76,9 @@ var child1 = new Child("kevin", "18");
 优点：
 
 - 融合原型链继承和构造函数的优点，是 JavaScript 中最常用的继承模式
-  缺点：
+
+缺点：
+
 - 会调用两次父构造函数。
 
 ## 寄生组合式继承
@@ -94,6 +98,13 @@ function Child(name, age) {
 }
 
 Child.prototype = Object.create(Parent.prototype);
+Child.prototype.constructor = Child;
+// 或者
+Child.prototype = Object.create(Parent.prototype, {
+  constructor: {
+    value: Child
+  }
+});
 
 var child1 = new Child("kevin", "18");
 
