--- a/docs/notes/advanced/常见算法.md
+++ b/docs/notes/advanced/常见算法.md
@@ -13,11 +13,37 @@ const bubbleSort = arr => {
   for (let i = 0; i < arr.length - 1; i++) {
     for (let j = 0; j < arr.length - i; j++) {
       if (arr[j] > arr[j + 1]) {
-        swap(arr, j, j+1)
+        swap(arr, j, j + 1);
       }
     }
   }
-  
+
+  return arr;
+};
+```
+
+## 插入排序
+
+```js
+const insertionSort = arr => {
+  if (arr.length <= 1) {
+    return arr
+  }
+  for (let i = 1; i < arr.length; i++) {
+    let temp = arr[i];
+    let j = i;
+    while (j) {
+      if (temp >= arr[j - 1]) {
+        // 当前考察数大于前一个元素，证明有序，退出循环
+        break;
+      }
+      // 将大于该考察数的元素向后退1
+      arr[j] = arr[j - 1];
+      j--;
+    }
+    // 将考察数放在应该插入的位置
+    arr[j] = temp;
+  }
   return arr;
 };
 ```
@@ -25,7 +51,6 @@ const bubbleSort = arr => {
 ## 选择排序
 
 ```js
-
 function swap(arr, a, b) {
   let temp = arr[a];
   arr[a] = arr[b];
@@ -43,7 +68,7 @@ const selectionSort = arr => {
       }
     }
     // 将最小数移到剩余元素的最左边
-    swap(arr, i, minIdx)
+    swap(arr, i, minIdx);
   }
   return arr;
 };
@@ -117,3 +142,53 @@ function quickSort(arr) {
 ```
 
 ## 洗牌算法
+
+```js
+function swap(arr, a, b) {
+  let temp = arr[a];
+  arr[a] = arr[b];
+  arr[b] = temp;
+}
+
+function shuffle(arr) {
+  if (!Array.isArray(arr) || arr.length === 0) {
+    return [];
+  }
+  let index = 0;
+  const lastIndex = arr.length - 1;
+  const result = [...arr];
+  while (index < lastIndex) {
+    const rand = index + Math.floor(Math.random() * (lastIndex - index + 1));
+    swap(result, rand, index);
+    index++;
+  }
+  return result;
+}
+```
+
+## 斐波那契数列
+
+递归版
+
+```js
+function Fibonacci(n) {
+  if (n <= 2) return 1;
+  return Fibonacci(n - 1) + Fibonacci(n - 2);
+}
+```
+
+循环版
+
+```js
+function Fibonacci(n) {
+  if (n <= 2) return 1;
+  let a = 1,
+    b = 1;
+  for (let i = 2; i < n; i++) {
+    let temp = a;
+    a = b;
+    b = temp + a;
+  }
+  return b;
+}
+```
