--- a/docs/notes/advanced/常见算法.md
+++ b/docs/notes/advanced/常见算法.md
@@ -27,7 +27,7 @@ const bubbleSort = arr => {
 ```js
 const insertionSort = arr => {
   if (arr.length <= 1) {
-    return arr
+    return arr;
   }
   for (let i = 1; i < arr.length; i++) {
     let temp = arr[i];
@@ -139,6 +139,41 @@ function quickSort(arr) {
 
   return arr;
 }
+```
+
+## 归并排序
+
+```js
+const mergeSort = arr => {
+  //采用自上而下的递归方法
+  if (arr.length < 2) {
+    return arr;
+  }
+  // length >> 1 和 Math.floor(len / 2) 等价
+  let middle = Math.floor(arr.length / 2),
+    left = arr.slice(0, middle),
+    right = arr.slice(middle); // 拆分为两个子数组
+  return merge(mergeSort(left), mergeSort(right));
+};
+
+const merge = (left, right) => {
+  const result = [];
+
+  while (left.length && right.length) {
+    // 注意: 判断的条件是小于或等于，如果只是小于，那么排序将不稳定.
+    if (left[0] <= right[0]) {
+      result.push(left.shift());
+    } else {
+      result.push(right.shift());
+    }
+  }
+
+  while (left.length) result.push(left.shift());
+
+  while (right.length) result.push(right.shift());
+
+  return result;
+};
 ```
 
 ## 洗牌算法
