--- a/docs/notes/advanced/节流和防抖.md
+++ b/docs/notes/advanced/节流和防抖.md
@@ -43,28 +43,18 @@ function debounce(fn, delay) {
 
 ```javascript
 function throttle(fn, delay) {
-  let timer = null,
-    remaining = 0,
-    previous = Date.now();
+  let disable = false
   return function() {
-    let now = Date.now();
-    remaining = now - previous;
-    if (remaining >= delay) {
-      timer && clearTimeout(timer);
-      timer = null;
-      fn.apply(this, arguments);
-      previous = now;
-    } else {
-      if (!timer) {
-        timer = setTimeout(() => {
-          fn.apply(this, arguments);
-          previous = Date.now();
-        }, delay - remaining);
-      }
+    if (disable) {
+      return
     }
-  };
+    fn.apply(this, arguments)
+    disable = true
+    setTimeout(() => {
+      disable = false
+    }, delay)
+  }
 }
-// 注意throttle函数内的this指向并不一定是window，在哪个执行上下文调用throttle方法，this就指向谁，如果需要让他指向window，可以定义变量context = this，然后将context作为第一个参数传入fn.apply
 ```
 
 应用场景：在监听事件过程中一些需要实时执行的方法（如图片懒加载）
