--- a/docs/notes/browser/浏览器的渲染原理.md
+++ b/docs/notes/browser/浏览器的渲染原理.md
@@ -12,7 +12,7 @@
 
 3. 布局（Layout)
 
-    浏览器根据渲染树所体现的节点、各个节点的CSS定义以及它们的从属关系，计算出每个节点在屏幕中的位置。Web 页面中元素的布局是相对的，在页面元素位置、大小发生变化，往往会导致其他节点联动，需要重新计算布局，这时候的布局过程一般被称为**回流（Reflow）**。
+    浏览器根据渲染树所体现的节点、各个节点的CSS定义以及它们的从属关系，计算出每个节点在屏幕中的位置。布局输出的就是我们常说的盒模型（Box）。Web 页面中元素的布局是相对的，在页面元素位置、大小发生变化，往往会导致其他节点联动，需要重新计算布局，这时候的布局过程一般被称为**回流（Reflow）**。
 
 4. 绘制（Paint）
     
