--- a/docs/notes/others/前端性能优化.md
+++ b/docs/notes/others/前端性能优化.md
@@ -90,6 +90,16 @@ DNS Prefetch 就是浏览器提供给我们的一个 API。它是 Resource Hint 
 
 对于使用 CDN 的资源，DNS 解析会将 CDN 资源的域名解析到 CDN 服务的负载均衡器上，负载均衡器可以通过请求的信息获取用户对应的地理区域，从而通过负载均衡算法，在背后的诸多服务器中，综合选择一台地理位置近、负载低的机器来提供服务。例如为北京联通用户解析北京的服务器 IP。这样，用户在之后访问 CDN 资源时都是访问北京服务器，距离近，速度快。
 
+CDN 原理：
+
+1. 当用户点击网站页面上的内容URL，经过本地DNS系统解析，DNS系统会最终将域名的解析权交给CNAME指向的CDN专用DNS服务器（需要先将自己网站的域名解析到加速后的 CNAME，也就是让 CDN 服务器代理自己的网站）。
+2. CDN的DNS服务器将CDN的全局负载均衡设备IP地址返回用户。
+3. 用户向CDN的全局负载均衡设备发起内容URL访问请求。
+4. CDN全局负载均衡设备根据用户IP地址，以及用户请求的内容URL，选择一台用户所属区域的区域负载均衡设备，告诉用户向这台设备发起请求。
+5. 区域负载均衡设备会为用户选择一台合适的缓存服务器提供服务，选择的依据包括：根据用户IP地址，判断哪一台服务器距用户最近；根据用户所请求的URL中携带的内容名称，判断哪一台服务器上有用户所需内容；查询各个服务器当前的负载情况，判断哪一台服务器尚有服务能力。基于以上这些条件的综合分析之后，区域负载均衡设备会向全局负载均衡设备返回一台缓存服务器的IP地址。
+6. 全局负载均衡设备把服务器的IP地址返回给用户。
+7. 用户向缓存服务器发起请求，缓存服务器响应用户请求，将用户所需内容传送到用户终端。如果这台缓存服务器上并没有用户想要的内容，而区域均衡设备依然将它分配给了用户，那么这台服务器就要向它的上一级缓存服务器请求内容，直至追溯到网站的源服务器将内容拉到本地。
+
 ### 4. BFF 聚合接口
 
 BFF 非常合适做的一件事就是后端服务的聚合。
@@ -115,7 +125,7 @@ BFF 非常合适做的一件事就是后端服务的聚合。
 
 ### 3. 代码分割
 
-如果是SPA且bundle体积过大的话可以进行代码分割按需加载。
+如果是SPA且bundle体积过大的话可以进行代码分割按需加载（异步加载模块）。
 
 ### 4. 懒加载
 
@@ -133,16 +143,6 @@ BFF 非常合适做的一件事就是后端服务的聚合。
     <link rel="prefetch" href="/prefetch.js" as="script">
     ```
 
-- #### Prerender
-
-    Prerender 比 Prefetch 更进一步，可以粗略地理解不仅会预获取，还会预执行。
-
-    如果你指定 Prerender 一个页面，那么它依赖的其他资源，像 `<script>`、`<link>` 等页面所需资源也可能会被下载与处理。但是预处理会基于当前机器、网络情况的不同而被不同程度地推迟。例如，会根据 CPU、GPU 和内存的使用情况，以及请求操作的幂等性而选择不同的策略或阻止该操作。
-
-    ```html
-    <link rel="prerender" href="//sample.com/nextpage.html">
-    ```
-
 - #### Preload
 
     在遇到需要 Preload 的资源时，浏览器会 立刻 进行预获取，并将结果放在内存中，资源的获取不会影响页面 parse 与 load 事件的触发。直到再次遇到该资源的使用标签时，才会执行。由于我们会将 `<script>` 标签置于 `<body>` 底部来保证性能，因此可以考虑在 `<head>` 标签中适当添加这些资源的 Preload 来加速页面的加载与渲染。
@@ -153,6 +153,18 @@ BFF 非常合适做的一件事就是后端服务的聚合。
 
     与 Prefetch 相比，Preload 会强制浏览器立即获取资源，并且该请求具有较高的优先级（mandatory and high-priority），因此建议对一些当前页面会马上用到资源使用 Preload；相对的，Prefetch 的资源获取则是可选与较低优先级的，其是否获取完全取决于浏览器的决定，适用于预获取将来可能会用到的资源。
 
+- #### Prerender
+
+    Prerender 比 Prefetch 更进一步，可以粗略地理解不仅会预获取，还会预执行。
+
+    如果你指定 Prerender 一个页面，那么它依赖的其他资源，像 `<script>`、`<link>` 等页面所需资源也可能会被下载与处理。但是预处理会基于当前机器、网络情况的不同而被不同程度地推迟。例如，会根据 CPU、GPU 和内存的使用情况，以及请求操作的幂等性而选择不同的策略或阻止该操作。
+
+    ```html
+    <link rel="prerender" href="//sample.com/nextpage.html">
+    ```
+
+
+
 ### 6. 把CSS放到顶部
 
 网页上的资源加载时从上网下顺序加载的，所以css放在页面的顶部能够优先渲染页面，让用户感觉页面加载很快。
@@ -161,9 +173,9 @@ BFF 非常合适做的一件事就是后端服务的聚合。
 
 加载js时会对后续的资源造成阻塞，必须得等js加载完才去加载后续的文件 ，所以就把js放在页面底部最后加载。
 
-### 8. 使用无cookie的域
+### 8. 使用无cookie的域，分散域名
 
-比如CSS、js、图片等，客户端请求静态文件的时候，减少了 Cookie 的反复传输对主域名的影响。
+比如CSS、js、图片等，客户端请求静态文件的时候，减少了 Cookie 的反复传输对主域名的影响，同时分散域名可以在HTTP/1.1 下更快的加载，因为 HTTP/1.1 下对同一个域名的 HTTP 请求有最大并发连接数限制。
 
 ## 四、运行中优化
 
@@ -187,14 +199,14 @@ CSS方面：
   
 - 避免使用CSS表达式（例如：calc()）
 
+- 提升至合成层
+
 JS方面
 
 - 合并你所有可能触发回流的操作（包括操作DOM，添加class，修改style）
 
 - 避免频繁调用会引发回流的API(如 getBoundingClientRect )，可以用一个变量缓存起来
   
-- 可以先为元素设置display: none，操作结束后再把它显示出来。因为在display属性为none的元素上进行的DOM操作不会引发回流和重绘。
-
 ### 4. 使用防抖和节流
 
 详见 节流和防抖 一节
