--- a/docs/notes/advanced/原型链与继承.md
+++ b/docs/notes/advanced/原型链与继承.md
@@ -138,7 +138,9 @@ console.log(child1);
 
 值得注意的是：
 
-super 关键字表示父类的构造函数，相当于 ES5 的 Parent.call(this)。
+super 关键字用于访问和调用一个对象的父对象上的函数，如 super.prop 和 super[expr]
+
+super() 相当于 ES5中 的绑定原型链 并执行 Parent.call(this)。
 
 子类必须在 constructor 方法中调用 super 方法，或者不写 constructor ，这将默认调用 super 方法，否则新建实例时会报错。这是因为子类没有自己的 this 对象，而是继承父类的 this 对象，然后对其进行加工。如果不调用 super 方法，子类就得不到 this 对象。
 
