--- a/docs/notes/others/前端性能优化.md
+++ b/docs/notes/others/前端性能优化.md
@@ -175,7 +175,7 @@ BFF 非常合适做的一件事就是后端服务的聚合。
 
 ### 8. 使用无cookie的域，分散域名
 
-比如CSS、js、图片等，客户端请求静态文件的时候，减少了 Cookie 的反复传输对主域名的影响，同时分散域名可以在HTTP/1.1 下更快的加载，因为 HTTP/1.1 下对同一个域名的 HTTP 请求有最大并发连接数限制。
+比如CSS、js、图片等，客户端请求静态文件的时候，减少了 Cookie 的反复传输对主域名的影响。而且分散域名可以在 HTTP/1.1 下更快的加载，因为浏览器对**向同一个域名建立的TCP连接**有最大数量的限制，chrome 为6个
 
 ## 四、运行中优化
 
