--- a/docs/notes/others/面试题整理.md
+++ b/docs/notes/others/面试题整理.md
@@ -304,3 +304,35 @@ getDerivedStateFromProps(props, state) 禁止访问 this.props，强制指定 pr
 getDerivedStateFromProps 不仅在 props 变化的时候触发，而是在每次 render（ state 和 props 更新）时就会触发
 
 getSnapshotBeforeUpdate(prevProps, prevState) 必须和 componentDidUpdate 一起使用，必须有返回值，返回值将作为第三个参数传递给 componentDidUpdate，主要是为了方便对更新前的 DOM 做一次快照，然后在更新后进行对比再执行一些逻辑
+
+## Q13: let var 的区别
+
+### 区别1：初始化(变量提升)与暂时性死区
+
+当解析器将代码转换为AST的时候，变量就会在一个词法作用域下完成声明，let/const 还会检查该词法作用域下有无同名的变量，有的话则报语法错误
+
+当函数真正执行的时候，也就是执行上下文初始化的时候，var 声明的变量也会初始化 (分配内存 + 赋值undefined)，函数声明则会直接初始化 + 赋值，而 let 声明的变量则要到执行的那一行的时候才会初始化，如果那一行是赋值操作，则初始化+赋值同时进行，所以 let 声明的变量之所以出现暂时性死区，是因为它还未完成初始化。const 同理。
+
+### 区别2：挂钩顶层对象属性
+
+顶层对象的属性(window)与全局变量挂钩，被认为是 JavaScript 语言最大的设计败笔之一。
+
+在全局环境下，var 和 function 声明的变量都会挂载到顶层对象(window)上，而 ES6 中的 let const class 则不会
+
+### 区别3：块级作用域
+
+ES5 规定，函数只能在顶层作用域和函数作用域之中声明，不能在块级作用域声明。
+
+ES6 引入了块级作用域，明确允许在块级作用域之中声明函数。ES6 规定，块级作用域之中，函数声明语句的行为类似于let，在块级作用域之外不可引用。
+
+## Q14: 箭头函数的特性
+
+1. 箭头函数不会创建自己的this，它只会从自己的作用域链的上一层继承this。箭头函数表达式对非方法函数是最合适的，如果作为一个对象的方法则需要考虑一下 this 指向的问题
+
+2. 由于箭头函数没有自己的 this 指针，通过 call() 或 apply() 方法调用一个函数时，只能传递参数而不能绑定 this，他们的第一个参数会被忽略
+
+3. 箭头函数没有 Arguments 对象，在大多数情况下，使用剩余参数是相较使用arguments对象的更好选择
+
+4. 箭头函数不能用作构造器，和 new一起用会抛出错误（xxx is not a constructor）。因为它没办法正常的调用 call() 或 apply()，而且没有 prototype 属性
+
+5. yield 关键字通常不能在箭头函数中使用（除非是嵌套在允许使用的函数内）。因此，箭头函数不能用作函数生成器。
