--- a/docs/notes/advanced/原型链与继承.md
+++ b/docs/notes/advanced/原型链与继承.md
@@ -1,6 +1,16 @@
-# 继承
+# 原型链与继承
 
-## 原型链继承
+## 原型链
+
+每个构造函数都有一个原型对象，原型对象都包含一个指向构造函数的指针，而实例都包含一个指向原型对象的内部指针。
+
+那么假如我们让原型对象等于另一个类型的实例，结果会怎样？显然，此时的原型对象将包含一个指向另一个原型的指针，相应地，另一个原型中也包含着一个指向另一个构造函数的指针。
+
+假如另一个原型又是另一个类型的实例，那么上述关系依然成立。如此层层递进，就构成了实例与原型的链条。这就是所谓的原型链的基本概念。
+
+## 继承
+
+### 原型链继承
 
 ```js
 function Parent(name) {
@@ -25,7 +35,7 @@ console.log(child1.getName()); // kevin
 - 引用类型的属性被所有实例共享
 - 在创建 Child 的实例时，不能向 Parent 传参
 
-## 构造函数继承
+### 构造函数继承
 
 ```js
 function Parent() {
@@ -48,7 +58,7 @@ var child1 = new Child();
 
 - 方法都在构造函数中定义，每次创建实例都会创建一遍方法
 
-## 组合式继承
+### 组合式继承
 
 原型链继承 + 构造函数继承
 
@@ -81,7 +91,7 @@ var child1 = new Child("kevin", "18");
 
 - 会调用两次父构造函数。
 
-## 寄生组合式继承
+### 寄生组合式继承
 
 ```js
 function Parent(name) {
@@ -112,6 +122,8 @@ console.log(child1);
 ```
 
 优点：这种方式的高效率体现它只调用了一次 Parent 构造函数，并且因此避免了在 Parent.prototype 上面创建不必要的、多余的属性。与此同时，原型链还能保持不变；因此，还能够正常使用 instanceof 和 isPrototypeOf。开发人员普遍认为寄生组合式继承是引用类型最理想的继承范式。
+
+### ES6 继承
 
 es6 中的 extends 就是这种实现方式的语法糖
 
