--- a/docs/notes/advanced/常见算法.md
+++ b/docs/notes/advanced/常见算法.md
@@ -123,7 +123,7 @@ function quickSort(arr) {
     }
     // 将 pivot 的下标改为 storeIndex
     swap(arr, left, storeIndex);
-    // 现在这个 storeIndex 就是绝对的中位数 index
+    // storeIndex 变成了一个已经确定顺序的下标，此时左侧元素全都比 pivot 小，右侧元素全都比 pivot 大
     return storeIndex;
   }
 
