--- a/docs/notes/others/模块加载机制.md
+++ b/docs/notes/others/模块加载机制.md
@@ -95,7 +95,7 @@ UMD 是 AMD 和 CommonJS 的综合产物。如上所说，AMD 的用武之地是
 
 ES Modules 是编译时输出接口，有如下两个特点:
 
-1. import 命令会被 JS 引擎静态分析，优先于模块内的其他内容执行（tree shaking 就是利用 ES Modules 的静态性进行分析处理的）
+1. import 命令会被 JS 引擎静态分析，依赖模块的加载是先于模块内部代码的执行的（先于任何语句），tree shaking 就是利用 ES Modules 的静态性进行分析处理的
 
 2. export 命令会有变量声明提升的效果，所以import 和 export 命令在模块中的位置并不影响程序的输出。
 
