--- a/docs/notes/advanced/闭包.md
+++ b/docs/notes/advanced/闭包.md
@@ -4,7 +4,13 @@
 
 ### 什么是作用域？
 
+ES3 中的作用域：
+
 作用域就是一套规则，用于确定在何处以及如何查找变量（标识符）的规则，在 JS 引擎中，作用域会在相应的执行上下文中的变量对象(可以看做真正存储变量的地方)中查找变量值。
+
+ES5 后的作用域：
+
+词法环境和该环境下的环境记录。
 
 ### 什么是词法作用域？
 
@@ -12,11 +18,14 @@
 
 ### JS中作用域的种类
 
+以下种类基于 Chrome 内函数 `[[scope]]` 私有属性的实现。
+
 1. 全局作用域 Global (用于访问全局执行上下文中的全局变量对象)
-2. 顶级作用域 Script  (一块可执行代码段的作用域，const let class 在 Script 中声明的变量不会挂载到 Global 中，而 var function 则会)
-3. 函数作用域 Scope  (一个函数内部自己的作用域，用于访问一个函数执行上下文中存储变量的的变量对象)
-4. 闭包作用域 Closure  (一个函数执行结束之后，它的 Scope 会被销毁，但是如果有子函数访问了该 Scope 下的某些变量，那么这些变量就会形成一个 Closure 作用域，而不会被 GC 回收)
-5. 块级作用域 Block  (ES6 新增的作用域类型，在循环体内或者 if 代码块内会生成)
+2. 顶级作用域 Script  (一段可执行脚本的作用域，const let class 在 Script 中声明的变量不会挂载到 Global 中，而 var function 则会)，顶级作用域也会自动添加到其他函数或模块的作用域链中，多个 Script 作用域会发生合并。
+3. 模块作用域 Module  (一个可执行模块的作用域，内部声明的变量统统不会挂载到 Global 中)
+4. 函数作用域 Scope  (一个函数内部自己的作用域，用于访问一个函数执行上下文中存储变量的的变量对象)
+5. 闭包作用域 Closure  (一个函数执行结束之后，它的 Scope 会被销毁，但是如果有子函数访问了该 Scope 下的某些变量，那么这些变量就会形成一个 Closure 作用域，而不会被 GC 回收)
+6. 块级作用域 Block  (ES6 新增的作用域类型，在 for 或者 if 或者 try/catch 代码块内会生成，也就是 {} 中的代码)
 
 ### 作用域链
 
